A2-2 HIさんの指摘の修正

--- a/A2-2-1.ipynb
+++ b/A2-2-1.ipynb
@@ -25,10 +25,12 @@
     "## 1. ダイクストラのアルゴリズムの簡単な実装\n",
     "\n",
     "ダイクストラのアルゴリズムは単一始点の最短経路問題を効率よく解く解法です．\n",
-    "ヒープを用いた効率化は5章ですることにして，この章ではリストを使った簡単な実装をします．\n",
-    "3章で示した疑似コードをPythonで書きます．\n",
-    "アルゴリズムの詳細は3章で示しています．\n",
-    "3章を横に表示しながらこの章を進めるのがよいでしょう．"
+    "この章ではリストを使った簡単な実装をします．\n",
+    "第1週4冊目の6.3節で示した疑似コードをPythonで書きます．\n",
+    "アルゴリズムの詳細は第1週6.3節で示しています．\n",
+    "第1週6.3節を横に表示しながらこの章を進めるのがよいでしょう．\n",
+    "\n",
+    "優先度付きキューを用いた効率的な実装は4章でします．"
    ]
   },
   {
@@ -39,7 +41,7 @@
    "source": [
     "### 1.1 準備とnetworkxの復習\n",
     "\n",
-    "次の2つのセルは準備ですので，実行してください．\n",
+    "次の二つのセルは準備ですので，実行してください．\n",
     "二つ目のセルで必要なモジュールを`import`し，いくつかの関数を定義しておきます．"
    ]
   },
@@ -51,9 +53,11 @@
    "source": [
     "!apt install libgraphviz-dev\n",
     "!pip install pygraphviz\n",
+    "# このセルの実行は1分近くかかるし出力も多い（100行近い）\n",
     "# 最終行は Successfully installed pygraphviz-x.xx\n",
     "# x.xxの部分は1.13などのバージョン番号\n",
-    "# このセルの出力は行数が多いので，実行が終わったら「出力を消去」しましょう"
+    "# 2度目の実行は短時間で終わり，出力は10行程度である．2度実行した場合の最終行は次のようになる．(y.yyとx.xx)はバージョン番号\n",
+    "# Requirement already satisfied: pygraphviz in /usr/local/lib/pythony.yy/dist-packages (x.xx)"
    ]
   },
   {
@@ -97,7 +101,7 @@
     "  return G\n",
     "\n",
     "G1 = sample_graph1()\n",
-    "L1 = nx.get_edge_attributes(G1, 'weight') # w1は辞書型でキーは辺，値は重み（辺の長さ），\n",
+    "L1 = nx.get_edge_attributes(G1, 'weight') # L1は辞書型でキーは辺，値は重み（辺の長さ），\n",
     "answer_d1 = nx.single_source_dijkstra_path_length(G1, 0)\n",
     "print('G1の辺の長さ L1 = ', L1)\n",
     "print('グラフ G1')\n",
@@ -245,9 +249,9 @@
    "source": [
     "### 1.2 dijkstra関数をPythonで書く\n",
     "\n",
-    "3.1節の疑似コードをPythonのコードに書き換えます．\n",
-    "次のコードセルに3.1節のdijkstra関数をコピーしてあります．\n",
-    "試しに実行してもこのままでは動きませんね．\n",
+    "第1週6.3節の疑似コードをPythonのコードに書き換えます．\n",
+    "次のコードセルに前回6.3節のdijkstra関数をコピーしてあります．\n",
+    "試しに実行しても文法エラー(SyntaxError)で関数が定義できませんね．\n",
     "\n",
     "**練習**\n",
     "次のコードのdijkstra関数を上から順に読んで，Python言語に合うように書き換えなさい．\n",
@@ -257,11 +261,12 @@
     "  \n",
     "  `def dijkstra(G, L, s):`\n",
     "- `頂点u`という日本語混じりの変数名を`u`に書き換えます．\n",
-    "- 頂点集合`V`はnetworkxでは頂点のリストで表します．\n",
-    "  頂点のリストは4.1節で練習したように`list(G.nodes)`です．\n",
+    "- 頂点集合`V`をnetworkxの頂点のリストに書き換えます．\n",
+    "  グラフ`G`の頂点のリストは，1.1節で練習したように`list(G.nodes)`です．\n",
     "- `Sにuを加える`は`S`が集合型ですから`S.add(u)`と書き換えます．\n",
     "- `頂点v`という日本語混じりの変数名を`v`に書き換えます．\n",
-    "- `uの隣接頂点`は4.1節で練習したように`adj`を使って書き換えます．"
+    "- `uの隣接頂点`をnetworkxの隣接頂点リストに書き換えます．\n",
+    "  1.1節で練習したように`list(G.adj[u])`がグラフ`G`の頂点`u`の隣接頂点リストです．"
    ]
   },
   {
@@ -274,6 +279,8 @@
     "Q = [] # 距離が確定していない頂点のリスト\n",
     "pi = {} # pi[v]は短い経路上で，vの直前にある頂点\n",
     "\n",
+    "# sから各頂点への最短距離を返す\n",
+    "# G: グラフ, L: Gの各辺の長さの辞書, s: 始点とする頂点\n",
     "dijkstra(G, L, s):\n",
     "  initialize_single_source(G) # すべての頂点uについて距離d[u]を初期化する\n",
     "  S = set() # Sは空集合\n",
@@ -297,8 +304,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "上のセルの`dijkstra`関数をPython言語に書き換えると，このセルを実行しても文法エラー(SyntaxError)は起きません．\n",
+    "\n",
     "次のコードセルで作成した`dijkstra`関数を呼び出してみましょう．\n",
-    "`initialize_single_source`など未定義の関数があるのでエラーになりますね．\n"
+    "`initialize_single_source`など未定義の関数があるので呼び出すとエラー(NameError)になります．"
    ]
   },
   {
@@ -316,7 +325,7 @@
    "source": [
     "`dijkstra`関数から呼び出す関数をこれから作成します．\n",
     "このノートブックの終わりでは`dijkstra`関数が動作するようにしましょう．\n",
-    "3.1節の疑似コードを確認しながら次の4つの関数を書いてください．\n",
+    "前回6.3節の疑似コードを確認しながら次の4つの関数を書いてください．\n",
     "\n",
     "- initialize_single_source(G)\n",
     "- insert(u)\n",
@@ -377,7 +386,7 @@
     "`insert(u)`関数を次のセルに定義しなさい．\n",
     "`u`は頂点（の番号）です．\n",
     "\n",
-    "ヒント：`Q`はリストです．\n",
+    "ヒント：`Q`は頂点のリストです．\n",
     "リストに要素を追加するには`append`関数を使います．\n",
     "詳しくは第1週の4.1節や[リストの説明2](https://docs.python.org/ja/3/tutorial/datastructures.html#more-on-lists)を読んでください．"
    ]
@@ -441,10 +450,14 @@
    "source": [
     "**練習**\n",
     "`extract_min()`関数を次のセルに定義しなさい．\n",
+    "この関数は最短距離の頂点を返します．\n",
+    "最短距離の頂点はリスト`Q`から削除します．\n",
     "\n",
     "ヒント：\n",
-    "`Q`はリストです．リストの各要素`v`に対して処理を繰り返すには`for v in Q:`のように`for`文を使います．\n",
-    "リスト`Q`から要素`u`を取り除くには`remove`関数を使います．"
+    "`Q`は距離が確定していない頂点のリストです．\n",
+    "最短距離の頂点を探すには`Q`のすべての頂点`v`の距離`d[v]`を比べる必要があります．\n",
+    "リストの各要素`v`に対して処理を繰り返すには`for v in Q:`のように`for`文を使います．\n",
+    "リスト`Q`から要素を取り除くには`remove`関数を使います．"
    ]
   },
   {
@@ -573,7 +586,7 @@
    "source": [
     "# 頂点vへの二つの経路のうち短いものを残す\n",
     "def relax(u, v, L):\n",
-    "   # wuvに辺(u, v)の長さを代入する\n",
+    "   # luvに辺(u, v)の長さを代入する\n",
     "  if (u, v) in L:\n",
     "    luv = L[(u, v)]\n",
     "  else:\n",
