--- a/A2-2-2.ipynb
+++ b/A2-2-2.ipynb
@@ -22,7 +22,9 @@
    "source": [
     "## 2. 実装のクラス化\n",
     "\n",
-    "1章と同じノートブックだと同一の仮想マシンで混乱するため，2冊目のノートブックです．\n",
+    "1章で作成したdijkstra関数とそこから呼び出される関数をクラスにまとめます．\n",
+    "\n",
+    "1章と同じノートブックだと同一の仮想マシンで混乱するため，別のノートブックです．\n",
     "1冊目を横に並べて表示しておくことをお勧めします．\n",
     "\n",
     "次の2つのセルは準備ですので，実行してください．\n",
@@ -107,7 +109,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "次のセルはサンプルのグラフ`G1`と`G2`を図示するコードですので，実行しなさい．"
+    "次のセルはサンプルのグラフG1とG2を図示するコードですので，実行しなさい．"
    ]
   },
   {
@@ -133,16 +135,18 @@
    "source": [
     "### 2.1 クラス化する\n",
     "\n",
-    "先ほどのノートブックで作成したダイクストラのアルゴリズムの関数群（dijkstra, initialize_single_source, insert, extract_min, relax）をPythonの`FirstImplementation`クラスにまとめなさい．\n",
+    "先ほどのノートブックで作成したダイクストラのアルゴリズムの関数群（dijkstra, initialize_single_source, insert, extract_min, relax）を次のコードセルの`FirstImplementation`クラスにまとめなさい．\n",
     "\n",
-    "次のコードセルにこのクラスの一部を作成していますので，残りの部分を書く必要があります．\n",
+    "このクラスの一部を作成してありますので，残りの部分を書く必要があります．\n",
     "\n",
     "- クラス名は`FirstImplementation`．\n",
-    "- 4.2節で作った5つの関数をこのクラス内で定義する．\n",
-    "- 辞書d，pi，リストQをこのクラスに入れる．\n",
+    "- 1.2節で作った5つの関数をこのクラス内で定義する．\n",
     "  \n",
-    "  初期化関数`__init__`内で辞書dとpi，リストQを宣言する．\n",
-    "  オブジェクト内の変数を読み書きするときは`self.d`のように変数名の前に`self.`をつけて使う．\n",
+    "  字下げした範囲がクラス．\n",
+    "- 2つの辞書`d`と`pi`，リスト`Q`をこのクラスに入れる．\n",
+    "  \n",
+    "  初期化関数`__init__`内で辞書`d`と`pi`，リスト`Q`を宣言する．\n",
+    "  関数内でこれらの変数を読み書きするときは`self.d`のように変数名の前に`self.`をつけて使う．\n",
     "- 関数を定義する際は，第1引数に`self`を<u>追加する．</u>\n",
     "  \n",
     "  `self`は自身のオブジェクトを指す．例：`insert`関数の定義の部分．\n",
@@ -172,8 +176,8 @@
     "- `extract_min()`\n",
     "- `relax(u, v, L)`\n",
     "\n",
-    "4.2節の関数と同じ処理になるようにこれら4つの関数を書きましょう．\n",
-    "`self`がついたり，字下げが増えたりする以外は4.2節のままです．\n",
+    "1.2節の関数と同じ処理になるようにこれら4つの関数を書きましょう．\n",
+    "`self`がつくことと，字下げが増えるること以外は1.2節のままです．\n",
     "\n",
     "**書き換えを楽にする技法**\n",
     "`relax`関数内で辞書`d`を何度も使います．\n",
@@ -206,6 +210,8 @@
     "    self.Q = []   # 頂点が距離順に格納されたヒープ．Q[0]が最小距離の頂点\n",
     "    self.pi = {} # pi[u]は頂点uへの最短経路上で，頂点uの直前にある頂点\n",
     "\n",
+    "  # sから各頂点への最短距離を返す\n",
+    "  # G: グラフ, L: Gの各辺の長さの辞書, s: 始点とする頂点\n",
     "  def dijkstra(self, G, L, s):\n",
     "    d = self.d # この関数内ではd[s]と書けばself.d[s]を読み書きできる\n",
     "    Q = self.Q\n",
@@ -251,6 +257,7 @@
    "source": [
     "### 2.2 クラス化したものをテストする\n",
     "\n",
+    "次のコードセルでテストします．\n",
     "うまくFirstShortestPathクラスが作れたか，以下のコードセルを実行して，\n",
     "グラフG1，始点0について2冊目のノートブックと同じ結果が得られることを確かめよ．\n",
     "\n",
@@ -272,6 +279,24 @@
     "  print('正解です')\n",
     "else:\n",
     "  print('間違っています')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "上のコードの最初の2行について解説します．\n",
+    "\n",
+    "`c = FirstImplementation()`は`FirstImplementation`クラスのオブジェクトを生成して，変数`c`に格納します．\n",
+    "生成のときに呼び出されているのは`__init__(self)`関数です．\n",
+    "生成されたオブジェクト`c`には`d`と`Q`と`pi`のデータが保持されます．\n",
+    "これらのデータは`dijkstra`関数や`insert`関数などで読み書きされます．\n",
+    "\n",
+    "`d = c.dijkstra(G1, L1, 0)`はオブジェクト`c`の`dijkstra`関数を呼び出して，その戻り値を`d`に格納します．\n",
+    "`c`は`FirstImplementation`クラスのオブジェクトですから，先ほど定義した`dijkstra`関数が呼び出されます．\n",
+    "呼び出し元の`G1, L1, 0`は単一始点最短距離問題のグラフ，辺の長さの辞書，始点として`dijkstra`関数に渡されます．\n",
+    "`dijkstra`関数は各頂点の始点0からの最短距離の入った辞書を返します．\n",
+    "この辞書が`d`に格納されます．"
    ]
   },
   {
@@ -318,7 +343,7 @@
     "  d = FirstImplementation().dijkstra(G1, L1, s)\n",
     "  answer_d = nx.single_source_dijkstra_path_length(G1, s)\n",
     "  if d == answer_d:\n",
-    "    print(F'始点が{s}のときすべての頂点の距離が一致しました')\n",
+    "    print(F'始点が{s}のときすべての頂点の距離が正しく求められました')\n",
     "  else:\n",
     "    print(F'始点が{s}のとき距離が間違っている頂点があります．')\n",
     "    print()\n",
