--- a/A2-2-3.ipynb
+++ b/A2-2-3.ipynb
@@ -22,11 +22,12 @@
    "source": [
     "## 3. 優先度付きキュー\n",
     "\n",
-    "ダイクストラのアルゴリズムでminヒープを使うとリスト$Q$から最短距離の頂点を効率的に取り出せるようになります．\n",
-    "次章で作成する`SecondImplementaion`クラスでヒープを使います．\n",
+    "ダイクストラのアルゴリズムでmin優先度付きキューを使うと$Q$から最短距離の頂点を効率的に取り出せるようになります．\n",
+    "次章で作成する`SecondImplementaion`クラスでリスト型`Q`の代わりにこのキューを使います．\n",
     "\n",
-    "この章ではヒープの実装例として`DijkstraHeap`クラスを示します．\n",
-    "この実装を次章で使えるように，ヒープの使い方を練習してください．\n",
+    "この章ではmin優先度付きキューの実装例として`DijkstraHeap`クラスを示します．\n",
+    "データ構造にヒープを使うので，クラス名をヒープにしました．\n",
+    "この実装を次章で使えるように，min優先度付きキューのそれぞれの関数の使い方を理解してください．\n",
     "\n",
     "次の2つのセルは準備ですので，実行してください．\n",
     "二つ目のセルで必要なモジュールを`import`し，いくつかの関数を定義しておきます．"
@@ -68,17 +69,19 @@
    "source": [
     "### 3.1 実装例\n",
     "\n",
-    "ヒープのデータは次の3つです．これらは`__init__`関数内で宣言しています．\n",
-    "- `d`：`d[u]`が頂点`u`の距離．Pythonの辞書\n",
-    "- `Q`：距離順に頂点を格納したヒープ．`Q[0]`が最小距離の頂点．Pythonのリスト\n",
-    "- `pos`：`pos[u]`は頂点`u`のヒープ`Q`の位置(添字)．`Q[pos[u]]`に頂点`u`が格納されている．Pythonの辞書\n",
+    "ヒープクラスのデータは次の3つです．これらは`__init__`関数内で宣言しています．\n",
+    "- `d`：`d[u]`が頂点`u`の距離．Pythonの辞書型\n",
+    "- `Q`：距離順に頂点を格納したヒープ．`Q[0]`に最短距離の頂点．Pythonのリスト型\n",
+    "- `pos`：`pos[u]`は頂点`u`のヒープ`Q`の位置(添字)．`Q[pos[u]]`に頂点`u`が格納されている．Pythonの辞書型\n",
     "\n",
-    "ヒープの関数は次の5つです．\n",
+    "ヒープクラスの関数は次の5つです．\n",
     "- `extract_min()`：ヒープから最短距離の頂点を取り出す\n",
     "- `insert(u)`：ヒープに頂点`u`を追加する\n",
     "- `heapify_up(i)`：ヒープ条件を満たすように，ヒープの`i`番目の頂点を上に移動する\n",
-    "- `headipy_down(i)`：ヒープ条件を満たすように，ヒープの`i`番目の頂点を下に移動する\n",
-    "- `draw()`：ヒープを図示する．ヒープの動作を確認するための関数"
+    "- `heapify_down(i)`：ヒープ条件を満たすように，ヒープの`i`番目の頂点を下に移動する\n",
+    "- `draw()`：ヒープを図示する．ヒープの動作を確認するための関数\n",
+    "\n",
+    "`heapify_up`と`heapify_down`の二つの関数の引数はヒープの位置を与えることに注意せよ．頂点が引数なのは`insert`のみである．"
    ]
   },
   {
@@ -230,14 +233,22 @@
    "id": "6157c05a-62ce-46b2-bd18-684ae441923e",
    "metadata": {},
    "source": [
-    "以降，次のヒープを例にする．\n",
+    "次の図の例を使ってヒープを説明する．\n",
     "\n",
     "![](figs/heap.svg)\n",
     "\n",
-    "ヒープは二分木の形をしており，子の頂点の距離は必ず親の頂点の距離より長いという**ヒープ条件**を満たしている．\n",
-    "この条件を満たすことから，根には最短距離の頂点がある．\n",
+    "ヒープは二分木の形をしており，子の頂点の距離は親の頂点の距離以上（長いか等しい）であるという**ヒープ条件**を満たすように維持される．\n",
+    "図の頂点7に注目するとその親の頂点は0，子は頂点4と2である．\n",
+    "頂点7の距離は8，7の親の距離は0．\n",
+    "8は0以上なのでヒープ条件を満たしている．\n",
+    "頂点7の子頂点の距離は9と17であり，どちらも8以上の距離である．\n",
+    "よってこの親子もヒープ条件を満たしている．\n",
+    "\n",
+    "ヒープ条件を満たすことから，根には最短距離の頂点がある．\n",
     "\n",
     "ヒープに格納された頂点は，次の表のようにリストQの先頭から順に隙間なく保存される．\n",
+    "リストに二分木を格納するため，親子関係として，Q[i]の子をQ[2\\*i+1]とQ[2\\*i+2]と定める．\n",
+    "この例ではQ[1]に頂点7が格納されており，頂点7の二分木における子はQ[3]とQ[4]に格納された頂点4と2である．\n",
     "\n",
     "| リストQの位置i | 0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 |\n",
     "|--|--|--|--|--|--|--|--|--|\n",
@@ -303,12 +314,15 @@
    "metadata": {},
    "source": [
     "### 3.3 ヒープから最短距離の頂点を取り出す\n",
-    "ヒープhから最短距離の頂点を取り出す関数は`extract_min`関数です．\n",
+    "ヒープ`h`から最短距離の頂点を取り出す関数は`extract_min`関数です．\n",
+    "`extract_min`関数は，引数のない関数で，頂点を返します．\n",
     "`extract_min`関数内でヒープ条件を満たすために`heapify_down`関数を使っています．\n",
+    "ヒープ`h`の外からこの関数を呼び出すには，`h.extract_min()`関数のように書きます．\n",
     "\n",
     "**練習**\n",
     "ヒープ`h`から最短距離の頂点を取り出し，取り出した頂点を変数`u`に代入するコードになるように，次のセルの`....`の部分に書きなさい．\n",
-    "「最短距離の頂点 0」と頂点1が根に移動したヒープが出力されたら正解．"
+    "「最短距離の頂点 0」と頂点1が根に移動したヒープが出力されたら正解．\n",
+    "`extract_min`関数を呼び出すとよい．"
    ]
   },
   {
@@ -355,8 +369,8 @@
     "頂点の距離は辞書`d`に格納します．\n",
     "\n",
     "**練習**\n",
-    "頂点0,<u>2,1</u>,3,4,5,6,7をこの順にヒープ`h`に追加するコードになるように，次のセルの`....`の部分を書きなさい．\n",
-    "頂点ごとの距離を与えていないので，挿入した順に並んだ二分木が表示されるのが正解．"
+    "頂点0,<u>2,1</u>,3,4,5,6,7をこの順にヒープ`h`に追加するコードになるように，次のセルの`....`の部分を書き換えなさい．\n",
+    "頂点の距離を与えていないので，挿入した順に並んだ二分木が表示されれば正解．"
    ]
   },
   {
@@ -383,7 +397,7 @@
     "\n",
     "**練習**\n",
     "ヒープに頂点0,<u>2,1</u>,3,4,5,6,7の順に頂点を追加するコードを示す．\n",
-    "頂点の距離を順に0,17,5,20,9,14,29,8にするように`....`の部分にコードを書き加えなさい．\n",
+    "頂点の距離を順に0,17,5,20,9,14,29,8にするように`....`の部分を書き換えなさい．\n",
     "なお，`for`の各繰り返しで，頂点`u`の距離は変数`ud`に格納されている．"
    ]
   },
@@ -435,6 +449,7 @@
     "この頂点はヒープ条件を満たさない可能性があります．\n",
     "\n",
     "この頂点についてヒープ条件（どの親も子より距離が短い）を満たすようにヒープを維持するために，この頂点`u`に対して`heapify_up(h.pos[u])`を呼び出します．\n",
+    "なお，なお，`h.pos[u]`は頂点`u`がリスト`Q`の何番目に格納されているかという整数です．\n",
     "\n",
     "1. 例えば図のように頂点7を追加した直後のヒープは，頂点3と7の親子の間で，ヒープ条件を満たさない可能性がある．\n",
     "   この例では満たさないが，満たす場合もある．\n",
@@ -446,7 +461,7 @@
     "   ![](figs/heap-insert-up-2.svg)\n",
     "\n",
     "**練習**\n",
-    "以下のコードは頂点0,2,1,$\\ldots$を順にヒープ`h`に追加している．\n",
+    "以下のコードは頂点0,2,1, ...を順にヒープ`h`に追加している．\n",
     "ヒープ条件を満たすように維持したいので，\n",
     "追加した頂点`u`に対して`heapify_up(h.pos[u])`を呼び出すように次のコードの`....`の部分を書きなさい．\n",
     "\n",
@@ -543,7 +558,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
