--- a/A2-2-4.ipynb
+++ b/A2-2-4.ipynb
@@ -21,10 +21,8 @@
    "metadata": {},
    "source": [
     "今週4冊目のノートブックです．\n",
-    "同じノートブックだと同一の仮想マシンで混乱するのを防ぐ目的のほかに，異なるノートブックからの方がコピーしやすいという利点もあると思います．\n",
-    "\n",
-    "次のコードセルは準備のセルです．\n",
-    "実行しなさい．"
+    "同一の仮想マシンで混乱するのを防ぐ目的で別のノートブックにしています．\n",
+    "2冊目と3冊目のノートブックを見やすい場所に表示しておきましょう．"
    ]
   },
   {
@@ -37,7 +35,7 @@
     "\n",
     "この章では，ダイクストラのアルゴリズムを効率的に実装したSecondImplementationクラスを作成します．\n",
     "2章で実装したダイクストラのアルゴリズムに優先度付きキューを組み込んで高速化します．\n",
-    "優先度付きキューは3章で学びました．\n",
+    "優先度付きキューの使い方は3章で学びました．\n",
     "\n",
     "次の2つのセルは準備ですので，実行してください．\n",
     "二つ目のセルで必要なモジュールを`import`し，いくつかの関数を定義しておきます．"
@@ -127,16 +125,16 @@
     "次のような方針で効率的なダイクストラのアルゴリズムを実装します．\n",
     "\n",
     "1. クラス名を`SecondImplementation`にします．\n",
-    "1. 2章で作成した`FirstImplemetaion`クラスと3章で作成した`DijkstraHeap`クラスの関数をコピーして使います．\n",
+    "1. 2章で作成した`FirstImplemetaion`クラスと3章で作成した`DijkstraHeap`クラスの関数をコピーし，必要な変更を加えます．\n",
     "1. `__init__`で初期化するデータ構造は，`SecondImplementation`クラスで使った`d`，`Q`，`pi`に加えて，`DijkstraHeap`クラスの`pos`の4つです．\n",
-    "1. 次の3つの関数は`FirstImplemetaion`クラスの同名の関数を使います．\n",
+    "1. 次の2つの関数は`FirstImplemetaion`クラスの同名の関数を使います．\n",
     "   - `dijkstra`関数\n",
     "   - `initialize_single_source`関数\n",
     "1. 次の2つの関数は`FirstImplemetaion`クラスと`DijkstraHeap`クラスの両方にあります．\n",
     "   優先度キューを実装しているので`DijkstraHeap`クラスのものを使います．\n",
     "   - `extract_min`関数\n",
     "   - `insert`関数\n",
-    "1. `relax`関数は`FirstImplemetaion`クラスのものを使います．\n",
+    "1. `relax`関数は`FirstImplemetaion`クラスの同名の関数を使います．\n",
     "   ただし，距離が短くなった頂点についてヒープ条件を満たすとは限らないので，ヒープ条件を維持するように`if d[v] > du + wuv`の中に`self.heapify_up(self.pos[v])`を追加します．\n",
     "   `if`文の部分が次のようになります．\n",
     "\n",
@@ -223,10 +221,10 @@
     "\n",
     "c = SecondImplementation()\n",
     "s = 0\n",
-    "d = c.dijkstra(G1, L1, 0)\n",
+    "d = c.dijkstra(G1, L1, s)\n",
     "print(\"d =\", support.sortdict(d)) # 距離の辞書dを出力（頂点でソートして出力)\n",
     "if d == answer_d1:\n",
-    "  print('すべての頂点の距離が一致しました')\n",
+    "  print('すべての頂点の距離が正しく求められました．')\n",
     "else:\n",
     "  print('距離が間違っている場合があります．')\n",
     "  print()\n",
@@ -259,7 +257,7 @@
     "d = c.dijkstra(G2, L2, s)\n",
     "print(\"d =\", support.sortdict(d)) # 距離の辞書dを出力（頂点でソートして出力)\n",
     "if d == answer_d2:\n",
-    "  print('すべての頂点の距離が一致しました')\n",
+    "  print('すべての頂点の距離が正しく求められました．')\n",
     "else:\n",
     "  print('距離が間違っている場合があります．')\n",
     "  print()\n",
@@ -289,7 +287,7 @@
     "  d = SecondImplementation().dijkstra(G1, L1, s)\n",
     "  answer_d = nx.single_source_dijkstra_path_length(G1, s)\n",
     "  if d == answer_d:\n",
-    "    print(F'始点が{s}のときすべての頂点の距離が一致しました')\n",
+    "    print(F'始点が{s}のときすべての頂点の距離が正しく求められました．')\n",
     "  else:\n",
     "    print(F'始点が{s}のとき距離が間違っている頂点があります．')\n",
     "    print()\n",
