A2-2 HIさんの指摘の修正

--- a/A2-2-1.ipynb
+++ b/A2-2-1.ipynb
@@ -250,7 +250,7 @@
     "### 1.2 dijkstra関数をPythonで書く\n",
     "\n",
     "第1週6.3節の疑似コードをPythonのコードに書き換えます．\n",
-    "次のコードセルに前回6.3節のdijkstra関数をコピーしてあります．\n",
+    "次のコードセルに第1週6.3節のdijkstra関数をコピーしてあります．\n",
     "試しに実行しても文法エラー(SyntaxError)で関数が定義できませんね．\n",
     "\n",
     "**練習**\n",
@@ -304,7 +304,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "上のセルの`dijkstra`関数をPython言語に書き換えると，このセルを実行しても文法エラー(SyntaxError)は起きません．\n",
+    "上のセルの`dijkstra`関数をPython言語に書き換えると，上のセルを実行したときに文法エラー(SyntaxError)が起きなくなります．\n",
     "\n",
     "次のコードセルで作成した`dijkstra`関数を呼び出してみましょう．\n",
     "`initialize_single_source`など未定義の関数があるので呼び出すとエラー(NameError)になります．"
@@ -325,7 +325,7 @@
    "source": [
     "`dijkstra`関数から呼び出す関数をこれから作成します．\n",
     "このノートブックの終わりでは`dijkstra`関数が動作するようにしましょう．\n",
-    "前回6.3節の疑似コードを確認しながら次の4つの関数を書いてください．\n",
+    "第1週6.3節の疑似コードを確認しながら次の4つの関数を書いてください．\n",
     "\n",
     "- initialize_single_source(G)\n",
     "- insert(u)\n",
@@ -388,7 +388,7 @@
     "\n",
     "ヒント：`Q`は頂点のリストです．\n",
     "リストに要素を追加するには`append`関数を使います．\n",
-    "詳しくは第1週の4.1節や[リストの説明2](https://docs.python.org/ja/3/tutorial/datastructures.html#more-on-lists)を読んでください．"
+    "詳しくは第1週4.1節や[リスト型の説明2](https://docs.python.org/ja/3/tutorial/datastructures.html#more-on-lists)を読んでください．"
    ]
   },
   {
