--- a/A2-2-2.ipynb
+++ b/A2-2-2.ipynb
@@ -343,7 +343,7 @@
     "  d = FirstImplementation().dijkstra(G1, L1, s)\n",
     "  answer_d = nx.single_source_dijkstra_path_length(G1, s)\n",
     "  if d == answer_d:\n",
-    "    print(F'始点が{s}のときすべての頂点の距離が正しく求められました')\n",
+    "    print(F'始点が{s}のときすべての頂点の距離が正しく求められました．')\n",
     "  else:\n",
     "    print(F'始点が{s}のとき距離が間違っている頂点があります．')\n",
     "    print()\n",
