--- a/A2-2-3.ipynb
+++ b/A2-2-3.ipynb
@@ -238,9 +238,10 @@
     "![](figs/heap.svg)\n",
     "\n",
     "ヒープは二分木の形をしており，子の頂点の距離は親の頂点の距離以上（長いか等しい）であるという**ヒープ条件**を満たすように維持される．\n",
-    "図の頂点7に注目するとその親の頂点は0，子は頂点4と2である．\n",
+    "図の頂点7の親に注目すると，その親は頂点0．\n",
     "頂点7の距離は8，7の親の距離は0．\n",
-    "8は0以上なのでヒープ条件を満たしている．\n",
+    "8は0以上なので頂点7と0はヒープ条件を満たしている．\n",
+    "頂点7の子に注目すると，その子は頂点4と2である．\n",
     "頂点7の子頂点の距離は9と17であり，どちらも8以上の距離である．\n",
     "よってこの親子もヒープ条件を満たしている．\n",
     "\n",
@@ -449,7 +450,7 @@
     "この頂点はヒープ条件を満たさない可能性があります．\n",
     "\n",
     "この頂点についてヒープ条件（どの親も子より距離が短い）を満たすようにヒープを維持するために，この頂点`u`に対して`heapify_up(h.pos[u])`を呼び出します．\n",
-    "なお，なお，`h.pos[u]`は頂点`u`がリスト`Q`の何番目に格納されているかという整数です．\n",
+    "なお，`h.pos[u]`は頂点`u`がリスト`Q`の何番目に格納されているかという整数です．\n",
     "\n",
     "1. 例えば図のように頂点7を追加した直後のヒープは，頂点3と7の親子の間で，ヒープ条件を満たさない可能性がある．\n",
     "   この例では満たさないが，満たす場合もある．\n",
