SUさんの指摘に沿って修正

--- a/A2-2-1.ipynb
+++ b/A2-2-1.ipynb
@@ -71,7 +71,8 @@
     "import networkx as nx\n",
     "import math\n",
     "import pygraphviz as pgv\n",
-    "from IPython.display import Image, display_png # Imageクラス\n",
+    "from IPython.display import SVG, display_svg\n",
+    "# from IPython.display import Image, display_png # display_png(Image('file.png'))\n",
     "from test import support # sortdict関数\n",
     "\n",
     "# グラフの頂点のリストと辺のリストを出力する関数\n",
@@ -88,8 +89,8 @@
     "    A.get_edge(u, v).attr['label'] = d\n",
     "\n",
     "  A.layout(args='-Nshape=circle')  # default prog='neato' \n",
-    "  A.draw('tmp.png')\n",
-    "  display_png(Image('tmp.png'))\n",
+    "  A.draw('tmp.svg')\n",
+    "  display_svg(SVG('tmp.svg'))\n",
     "\n",
     "# グラフのサンプル\n",
     "def sample_graph1():\n",
@@ -105,7 +106,7 @@
     "answer_d1 = nx.single_source_dijkstra_path_length(G1, 0)\n",
     "print('G1の辺の長さ L1 = ', L1)\n",
     "print('グラフ G1')\n",
-    "draw_graph(G1)\n"
+    "draw_graph(G1)"
    ]
   },
   {
@@ -139,7 +140,8 @@
     "`list(G1.adj[0])`を使います．\n",
     "`[1, 4, 7]`が出力されたら正解です．\n",
     "\n",
-    "頂点7の隣接頂点は`[0, 1, 2, 4, 5]`です．\n",
+    "他の頂点も試しなさい．\n",
+    "例えば頂点7の隣接頂点は`[0, 1, 2, 4, 5]`です．\n",
     "順番は問いません．"
    ]
   },
@@ -431,7 +433,7 @@
    "source": [
     "**練習**\n",
     "リスト`Q`のすべての頂点の距離が出力されるように，次のコードの`....`の部分を書き換えなさい．\n",
-    "`for`文を使って`extract_min()`関数でこの`for`文を使います．"
+    "`extract_min()`関数でこの`for`文を使います．"
    ]
   },
   {
@@ -570,7 +572,7 @@
     "\n",
     "$$ d[v] > d[u] + luv $$\n",
     "\n",
-    "より短い経路であれば次のように距離`d[v]`と直前の頂点`pi[v]`を新しいものに更新します．\n",
+    "上の式を満たしていれば，次のように距離`d[v]`と直前の頂点`pi[v]`を新しいものに更新します．\n",
     "\n",
     "```\n",
     "d[v] = d[u] + luv\n",
@@ -586,7 +588,7 @@
    "source": [
     "# 頂点vへの二つの経路のうち短いものを残す\n",
     "def relax(u, v, L):\n",
-    "   # luvに辺(u, v)の長さを代入する\n",
+    "  # luvに辺(u, v)の長さを代入する\n",
     "  if (u, v) in L:\n",
     "    luv = L[(u, v)]\n",
     "  else:\n",
