--- a/A2-2-2.ipynb
+++ b/A2-2-2.ipynb
@@ -293,7 +293,7 @@
     "これらのデータは`dijkstra`関数や`insert`関数などで読み書きされます．\n",
     "\n",
     "`d = c.dijkstra(G1, L1, 0)`はオブジェクト`c`の`dijkstra`関数を呼び出して，その戻り値を`d`に格納します．\n",
-    "`c`は`FirstImplementation`クラスのオブジェクトですから，先ほど定義した`dijkstra`関数が呼び出されます．\n",
+    "`c`は`FirstImplementation`クラスのオブジェクトですから，クラス内に定義した`dijkstra`関数が呼び出されます．\n",
     "呼び出し元の`G1, L1, 0`は単一始点最短距離問題のグラフ，辺の長さの辞書，始点として`dijkstra`関数に渡されます．\n",
     "`dijkstra`関数は各頂点の始点0からの最短距離の入った辞書を返します．\n",
     "この辞書が`d`に格納されます．"
