--- a/A2-2-3.ipynb
+++ b/A2-2-3.ipynb
@@ -56,7 +56,7 @@
     "import networkx as nx\n",
     "import math\n",
     "import pygraphviz as pgv\n",
-    "from IPython.display import SVG, display_svg # Imageクラス\n",
+    "from IPython.display import SVG, display_svg\n",
     "from test import support # sortdict関数\n",
     "\n",
     "log = False # log = Trueにすると途中経過が出力される"
@@ -257,7 +257,7 @@
     "| 距離d[u]     | 0 | 8 | 5 | 9 | 17 | 14 | 29 | 20 |\n",
     "\n",
     "次のセルでこのヒープを作る`demo()`関数を定義しているので実行すること．\n",
-    "この関数は`DijkstraHeap`オブジェクトを生成して返す．"
+    "この関数は8要素を追加した`DijkstraHeap`オブジェクトを生成して返す．"
    ]
   },
   {
@@ -267,8 +267,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def demo():\n",
-    "  h = DijkstraHeap()\n",
+    "def demo(): # 8要素が挿入されたヒープを返す\n",
+    "  h = DijkstraHeap() # 空のヒープを作る\n",
     "  for u, ud in zip([0,2,1,3,4,5,6,7], [0,17,5,20,9,14,29,8]):\n",
     "    h.d[u] = ud\n",
     "    print('追加する頂点', u, '距離', ud)\n",
@@ -304,7 +304,7 @@
    "outputs": [],
    "source": [
     "log = False # log = Trueにすると途中経過が出力される\n",
-    "h = demo()\n",
+    "h = demo()  # hは8要素が挿入されたヒープ\n",
     "# ヒープを図示するコードを書き加える\n",
     "...."
    ]
@@ -381,7 +381,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "h = DijkstraHeap()\n",
+    "h = DijkstraHeap() # hは空のヒープ\n",
     "for u in [0,2,1,3,4,5,6,7]:\n",
     "  # 頂点uをヒープhに追加するコードを書き加える\n",
     "  print('追加する頂点', u)\n",
