--- a/A2-2-4.ipynb
+++ b/A2-2-4.ipynb
@@ -62,7 +62,7 @@
     "import networkx as nx\n",
     "import math\n",
     "import pygraphviz as pgv\n",
-    "from IPython.display import Image, display_png # Imageクラス\n",
+    "from IPython.display import SVG, display_svg\n",
     "from test import support # sortdict関数\n",
     "\n",
     "# グラフの頂点のリストと辺のリストを出力する関数\n",
@@ -79,8 +79,8 @@
     "    A.get_edge(u, v).attr['label'] = d\n",
     "\n",
     "  A.layout(args='-Nshape=circle')  # default prog='neato' \n",
-    "  A.draw('tmp.png')\n",
-    "  display_png(Image('tmp.png'))\n",
+    "  A.draw('tmp.svg')\n",
+    "  display_svg(SVG('tmp.svg'))\n",
     "\n",
     "# グラフのサンプル\n",
     "def sample_graph1():\n",
@@ -126,7 +126,7 @@
     "\n",
     "1. クラス名を`SecondImplementation`にします．\n",
     "1. 2章で作成した`FirstImplemetaion`クラスと3章で作成した`DijkstraHeap`クラスの関数をコピーし，必要な変更を加えます．\n",
-    "1. `__init__`で初期化するデータ構造は，`SecondImplementation`クラスで使った`d`，`Q`，`pi`に加えて，`DijkstraHeap`クラスの`pos`の4つです．\n",
+    "1. `__init__`で初期化するデータ構造は，`FirstImplementation`クラスで使った`d`，`Q`，`pi`に加えて，`DijkstraHeap`クラスの`pos`の4つです．\n",
     "1. 次の2つの関数は`FirstImplemetaion`クラスの同名の関数を使います．\n",
     "   - `dijkstra`関数\n",
     "   - `initialize_single_source`関数\n",
@@ -135,12 +135,12 @@
     "   - `extract_min`関数\n",
     "   - `insert`関数\n",
     "1. `relax`関数は`FirstImplemetaion`クラスの同名の関数を使います．\n",
-    "   ただし，距離が短くなった頂点についてヒープ条件を満たすとは限らないので，ヒープ条件を維持するように`if d[v] > du + wuv`の中に`self.heapify_up(self.pos[v])`を追加します．\n",
+    "   ただし，距離が短くなった頂点についてヒープ条件を満たすとは限らないので，ヒープ条件を維持するために`d[v] > d[u] + luv`が成り立つならば`self.heapify_up(self.pos[v])`を呼び出します．\n",
     "   `if`文の部分が次のようになります．\n",
     "\n",
     "   ```\n",
-    "       if d[v] > du + luv:\n",
-    "         d[v] = du + luv\n",
+    "       if d[v] > d[u] + luv:\n",
+    "         d[v] = d[u] + luv\n",
     "         pi[v] = u\n",
     "         self.heapify_up(self.pos[v]) # この行を追加\n",
     "   ```\n",
