--- a/A2-3.ipynb
+++ b/A2-3.ipynb
@@ -73,6 +73,7 @@
     "import math\n",
     "import pygraphviz as pgv\n",
     "from IPython.display import SVG, display_svg\n",
+    "# from IPython.display import Image, display_png # display_png(Image('file.png'))\n",
     "from test import support # sortdict関数\n",
     "import time\n",
     "\n",
@@ -103,13 +104,14 @@
     "                [1, 7, 4], [2, 3, 3], [2, 6, 11], [3, 6, 9], [4, 5, 4], \n",
     "                [4, 7, 5], [5, 2, 1], [5, 6, 13], [7, 2, 7], [7, 5, 6]]:\n",
     "    G.add_edge(i, j, weight=w) # weightはnetworkx, labelはgraphviz\n",
-    "  w = nx.get_edge_attributes(G, 'weight')\n",
-    "  print('edge weight', w)\n",
     "  return G\n",
     "\n",
     "G1 = sample_graph1()\n",
-    "w1 = nx.get_edge_attributes(G1, 'weight')\n",
-    "answer_d1 = {0: 0, 1: 5, 2: 14, 3: 17, 4: 9, 5: 13, 6: 25, 7: 8}"
+    "L1 = nx.get_edge_attributes(G1, 'weight')\n",
+    "answer_d1 = {0: 0, 1: 5, 2: 14, 3: 17, 4: 9, 5: 13, 6: 25, 7: 8}\n",
+    "print('G1の辺の長さ L1 = ', L1)\n",
+    "print('グラフ G1')\n",
+    "draw_graph(G1)"
    ]
   },
   {
@@ -153,7 +155,7 @@
    "source": [
     "f = True\n",
     "for s in range(G1.order()):\n",
-    "  d = FirstImplementation().dijkstra(G1, w1, s)\n",
+    "  d = FirstImplementation().dijkstra(G1, L1, s)\n",
     "  answer_d = nx.single_source_dijkstra_path_length(G1, s)\n",
     "  if d != answer_d:\n",
     "    f = False\n",
@@ -207,7 +209,7 @@
    "source": [
     "f = True\n",
     "for s in range(G1.order()):\n",
-    "  d = SecondImplementation().dijkstra(G1, w1, s)\n",
+    "  d = SecondImplementation().dijkstra(G1, L1, s)\n",
     "  answer_d = nx.single_source_dijkstra_path_length(G1, s)\n",
     "  if d != answer_d:\n",
     "    f = False\n",
