主にA2-1-1を推敲

--- a/A2-1-1.ipynb
+++ b/A2-1-1.ipynb
@@ -162,7 +162,14 @@
     "id": "EazmFypBaYKT"
    },
    "source": [
-    "これまでに実行したセルの左に小さく表示されている「0秒」はセルの実行にかかった時間です．次のセルでは`time.sleep`関数を呼び出しているので実行に1秒かかります．`time.sleep`関数は引数で指定した秒数だけ時間実行を中断します．引数の秒数1を書き替えると実行時間が変化します．なお，1行目の`import`は`time`モジュールを使うという宣言です．`time`モジュールの`import`はノートブック内で一度実行すれば十分で，何度も同じモジュールを`import`する必要はありません．\n",
+    "これまでに実行したセルの左に小さく表示されている「0秒」はセルの実行にかかった時間です．\n",
+    "時間のかかる処理をしてみます．\n",
+    "次のセルでは`time.sleep`関数を呼び出しているので実行に1秒かかります．\n",
+    "`time.sleep`関数は引数で指定した秒数の間実行を中断します．\n",
+    "引数の秒数1を書き替えると実行時間が変化します．\n",
+    "なお，`time.sleep`関数は`time`モジュールの`sleep`関数です．\n",
+    "1行目の`import`は`time`モジュールを使うという宣言で，この宣言がないとエラーになります．\n",
+    "`time`モジュールの`import`はノートブック内で一度実行すれば十分で，何度も同じモジュールを`import`する必要はありません．\n",
     "\n",
     "参考：[time.sleep関数の説明](https://docs.python.org/ja/3/library/time.html#time.sleep)\n"
    ]
@@ -177,6 +184,19 @@
    "source": [
     "import time\n",
     "time.sleep(1.0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "aQx_aEDEaFXr"
+   },
+   "source": [
+    "参考：コードセルを初めて実行したときに「警告：このノートブックはGoogleが作成したものではありません」と表示された人は，変更が保存されません．\n",
+    "変更を保存するには「ドライブにコピーを保存」してください．\n",
+    "\n",
+    "参考：Colabのファイルメニューの保存を選んだときに「変更を保存できませんでした」と表示される人は「ドライブにコピーを保存」してください．\n",
+    "コピーが保存される「ドライブ」というのはGoogleドライブです．"
    ]
   },
   {
@@ -274,18 +294,13 @@
    },
    "source": [
     "### 1.3 コードセルの出力\n",
-    "コードセルを実行するとコードの出力がコードの下に表示されます．\n",
-    "レポートを提出するときは，出力を残したままipynbファイルをダウンロードして提出してください．\n",
+    "コードセルを実行すると最後の式の値がコードの下に表示されます．\n",
+    "次のセルのように複数の文を一つのセルにまとめて書くと，\n",
+    "実行結果として出力されるのは最後の文だけです．\n",
+    "`2`が出力されます．\n",
     "\n",
     "**練習**\n",
-    "ファイルメニューから「ダウンロード」「ipynbをダウンロード」と進んでこのノートブックをダウンロードしてください．\n",
-    "自分のPCにダウンロードしたWeek2.ipynbファイルがあることを確認しなさい．\n",
-    "確認できたらダウンロードしたファイルは紛らわしいので削除しましょう．\n",
-    "\n",
-    "次のセルのように複数の文を一つのセルにまとめて書くことができます．実行結果として出力されるのは最後の文だけです．`2`が出力されます．\n",
-    "\n",
-    "**練習**\n",
-    "途中の値を出力したい場合は`print`関数を使います．`a`の部分を`print(a)`に書き替えて`a`の値`1`と`b`の値`2`が出力されることを確かめなさい．"
+    "途中の値を出力したい場合は`print`関数を使います．`a`の部分を`print(a)`に書き替えて`a`の値`1`と`b`の値`2`の2行が出力されることを確かめなさい．"
    ]
   },
   {
@@ -341,6 +356,7 @@
    "source": [
     "**練習**\n",
     "`func_print(a, b, c, d)`関数を定義して一度呼び出している．\n",
+    "この関数を四回呼び出すコードにしたい．\n",
     "次のコードの`....`の3箇所で，この関数を次のように呼び出しなさい．\n",
     "関数の実体を構成する実行文は字下げされていることに注意しなさい．\n",
     "```\n",
@@ -455,7 +471,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.5 もっとColaboratoryを知りたい\n",
+    "### 1.5 提出するPDFファイルの作成\n",
+    "\n",
+    "レポートを提出するときは，出力を残したままのノートブックをPDFに保存して，PDFファイルを提出してください．\n",
+    "第1週の提出ファイル一覧はMoodleで確認しなさい．\n",
+    "\n",
+    "**練習**\n",
+    "Colabのファイルメニューから「印刷」を選び，「PDFに保存」や「Microsoft Print to PDF」を選んでこのノートブックをPDFに印刷してください．\n",
+    "ファイル名はノートブックと同じ名前にしましょう．\n",
+    "例えば，ノートブックのファイル名がA2-1-1.ipynbならPDFファイルの名前はA2-1-1.pdf．\n",
+    "印刷が終わったら，自分のPCにできたPDFファイル（A2-1-1.pdf）を開いて内容を確認しなさい．"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.6 保存したノートブックをあらためて開く\n",
+    "\n",
+    "Colabのファイルメニューから「保存」を選ぶと「すべての変更を保存しました」と表示されるでしょう．\n",
+    "保存先はGoogleドライブです．\n",
+    "\n",
+    "**練習**\n",
+    "ブラウザで新しい[Colab](https://colab.research.google.com/)ページを開いて，Googleドライブに保存したこのノートブックを開きなさい．\n",
+    "セルの実行結果が入っていれば保存されたものです．\n",
+    "\n",
+    "同じノートブックを2つのタブで表示したままだと気持ち悪いので一方のタブは閉じましょう．\n",
+    "\n",
+    "参考：あらためてMoodleのGoogle Colabノートブックを開くと，配布した状態の何も記入していないノートブックが開きます．\n",
+    "保存したノートブックを開きたいときはGoogleドライブのノートブックを開きなさい．\n",
+    "\n",
+    "Colabの上部に「変更を保存できませんでした」や「ドライブにコピー」が表示されているノートブックは，Googleドライブにコピーしていません．\n",
+    "「ドライブにコピー」をクリックしてノートブックをGoogleドライブに保存してください．\n",
+    "コピーしたノートブックは変更を保存できます．\n",
+    "次にこのノートブックを開くときは，Colabで，Googleドライブのノートブックを開いてください．"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.7 もっとColaboratoryを知りたい\n",
     "\n",
     "もっとColaboratoryを知りたい人は，\n",
     "[Overview of Colaboratory Features](https://colab.research.google.com/notebooks/basic_features_overview.ipynb)\n",
