--- a/A2-1-2.ipynb
+++ b/A2-1-2.ipynb
@@ -103,7 +103,7 @@
    "source": [
     "次のセルで無向グラフGを生成します．\n",
     "空のグラフが生成されるので頂点はありません．\n",
-    "グラフの生成に使う関数はnetworkxライブラリのGraph関数です．"
+    "グラフの生成に使う関数はnetworkxパッケージのGraph関数です．"
    ]
   },
   {
@@ -125,6 +125,8 @@
     "これらの関数は今後変更したグラフを確認するために使います．\n",
     "print_graph関数は引数で与えたグラフGの頂点のリストと辺のリストを出力する関数です．\n",
     "draw_graph関数は引数で与えたグラフGを可視化して表示する関数です．\n",
+    "\n",
+    "解説：\n",
     "変数Aは[pygraphviz](https://pygraphviz.github.io)のグラフで，networkxのグラフGをpygraphvizで表示するためにAに変換しています．\n",
     "\n",
     "解説：\n",
