--- a/A2-1-3.ipynb
+++ b/A2-1-3.ipynb
@@ -33,8 +33,8 @@
     "- 集合型\n",
     "- 辞書型\n",
     "\n",
-    "5章で，それぞれの型のデータに対して，その内にある要素が含まれるか調べる`in`演算にかかる時間を計測します．\n",
-    "リストや他の型のデータ中に，ある要素が含まれるか調べることを「探索」と呼びます．"
+    "5章で，これらの型のデータに対して，その内にある要素が含まれるか調べる`in`演算にかかる時間を計測します．\n",
+    "リスト型や他の型のデータ中に，ある要素が含まれるか調べることを「探索」と呼びます．"
    ]
   },
   {
@@ -45,7 +45,7 @@
    "source": [
     "### 4.1 リスト型\n",
     "\n",
-    "Pythonのリスト型は要素を先頭から順番に並べたデータ構造です．\n",
+    "Pythonのリスト型は要素を先頭から順序に並べたデータ構造です．\n",
     "C言語の配列に似ています．\n",
     "\n",
     "参考：[リスト型の説明1](https://docs.python.org/ja/3/tutorial/introduction.html#lists)，[2](https://docs.python.org/ja/3/tutorial/datastructures.html#more-on-lists)\n",
@@ -85,7 +85,7 @@
    },
    "source": [
     "**練習**\n",
-    "次のセルでは`11,13,17`の3つの要素からなるリストを作成して変数`l`に代入していますが，\n",
+    "次のセルでは`11,13,17`の3つの要素からなるリストを作成して変数`l`（小文字のエル）に代入していますが，\n",
     "リスト`l`の内容は出力されません．\n",
     "`l`が出力されるように2行目に次のどちらかの行を追加してください．\n",
     "```\n",
@@ -221,7 +221,7 @@
    "outputs": [],
    "source": [
     "for e in l:\n",
-    "  print(e, \"はlの要素です\")"
+    "  print(e, 'はlの要素です')"
    ]
   },
   {
@@ -655,9 +655,10 @@
     "id": "hYSi2Gunao0o"
    },
    "source": [
-    "次の練習でリストを`range`関数で生成すると`0`から順番に並んでいます．`in`演算子は要素が順番に並んでいることは想定していませんので，すべての要素を探します．なお，この演習では扱いませんが，順番通りに並んでいるとわかっていればもっと速く探す二分探索などの方法があります．\n",
+    "次の練習でリストを`range`関数で生成すると`0`から順に並んでいます．`in`演算子は要素が順に並んでいることは想定していませんので，すべての要素を探します．なお，この演習では扱いませんが，順序通りに並んでいるとわかっていればもっと速く探す二分探索などの方法があります．\n",
     "\n",
-    "次のように`random.shuffle`関数にリスト`l`を渡すと，`l`の順番をわざと乱すことができますが，`in`演算子で正しく要素の有無を調べられます．\n",
+    "次のように`random.shuffle`関数にリスト`l`を渡すと，`l`の順序を乱すことができます．\n",
+    "順序を乱しても`in`演算子で要素の有無を正しく調べられます．\n",
     "\n",
     "参考：[random.shuffle関数の説明](https://docs.python.org/ja/3/library/random.html#random.shuffle)"
    ]
@@ -699,7 +700,7 @@
     "**練習**\n",
     "以下のコメントに沿ってコードを書きなさい．\n",
     "100要素のリスト`l`を生成して，要素の追加や削除をした後，リストに要素が含まれるか探索します．\n",
-    "それぞれのコードセルで実行する内容は`#`で始まる行のコメントで指示しています．"
+    "それぞれのコードセルで実行する内容は`#`で始まるコメントで指示しています．"
    ]
   },
   {
@@ -710,10 +711,8 @@
    },
    "outputs": [],
    "source": [
-    "# 1. 0から99まで100要素のリスト`l`を生成する．先の例のように`list`関数と`range`関数を使うとよい．\n",
-    "# random.shuffle関数でリストをシャッフルしなさい．\n",
-    "# シャープ記号で始まる行はコメント\n",
-    "\n"
+    "# 1. 0から99まで100要素のリストlを生成する．先の例のようにlist関数とrange関数を使うとよい．\n",
+    "# シャープ記号で始まる行はコメント\n"
    ]
   },
   {
@@ -724,7 +723,18 @@
    },
    "outputs": [],
    "source": [
-    "# 2. リストlの末尾に100を追加する．append関数を使う．\n"
+    "# 2. random.shuffle関数でリストlをシャッフルしなさい．\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "yE6DJglElBDS"
+   },
+   "outputs": [],
+   "source": [
+    "# 3. リストlの末尾に100を追加する．append関数を使う．\n"
    ]
   },
   {
@@ -735,7 +745,7 @@
    },
    "outputs": [],
    "source": [
-    "# 3. リストlの10番目の直前に101を追加する．insert関数を使う．\n"
+    "# 4. リストlの10番目の直前に101を追加する．insert関数を使う．\n"
    ]
   },
   {
@@ -760,7 +770,7 @@
    },
    "outputs": [],
    "source": [
-    "# 4. リストに0が含まれているか調べる．in演算子を使う．Trueが出力される．\n"
+    "# 5. リストに0が含まれているか調べる．in演算子を使う．Trueが出力される．\n"
    ]
   },
   {
@@ -785,7 +795,7 @@
    },
    "outputs": [],
    "source": [
-    "# 5. リストに100が含まれているか調べる．Trueが出力される．\n"
+    "# 6. リストに100が含まれているか調べる．Trueが出力される．\n"
    ]
   },
   {
@@ -810,7 +820,7 @@
    },
    "outputs": [],
    "source": [
-    "# 6. リストに101が含まれているか調べる．Trueが出力される．\n"
+    "# 7. リストに101が含まれているか調べる．Trueが出力される．\n"
    ]
   },
   {
@@ -835,7 +845,7 @@
    },
    "outputs": [],
    "source": [
-    "# 7. リストに102が含まれているか調べる．Falseが出力される．\n"
+    "# 8. リストに102が含まれているか調べる．Falseが出力される．\n"
    ]
   },
   {
@@ -848,7 +858,7 @@
     "リストの要素数を色々変えて試せるようにリストの要素数を変数`n`に入れて以下の処理を書きなさい．\n",
     "書き終わったら`n=100`や`n=10000`，`n=10**7`(10の7乗．一千万)などで実行しなさい．\n",
     "\n",
-    "`n=10**8`(1億要素)や`n=10**9`(10億要素)で実行すると「使用可能なRAMをすべて使用した後で、セッションがクラッシュ」することがあります（12.7GBのシステムRAMの仮想PCの場合）．\n",
+    "`n=10**8`(1億要素)や`n=10**9`(10億要素)で実行すると「使用可能なRAMをすべて使用した後で、セッションがクラッシュ」することがあります（12.7GBのシステムRAMを持つ仮想PCの場合）．\n",
     "システムRAMのおおよその使用量は右上の「RAM」ところに表示されています．\n",
     "マウスポインタを「RAM」のところに移動すると使用量がGB（ギガバイト）単位で表示されます．"
    ]
@@ -1011,7 +1021,7 @@
     "参考：[集合型の説明](https://docs.python.org/ja/3/tutorial/datastructures.html#sets)\n",
     "\n",
     "次のセルでは`11,13,17`の3つの要素からなる集合を作成しています．\n",
-    "リストの場合は角括弧`[]`で囲んでいたのに対して，集合の場合は波括弧`{}`で囲みます．"
+    "リスト型の場合は角括弧`[]`で囲んでいたのに対して，集合型の場合は波括弧`{}`で囲みます．"
    ]
   },
   {
@@ -1140,7 +1150,7 @@
     "id": "-iQidVal1a5y"
    },
    "source": [
-    "次のように`add`関数で集合`s`に要素`10`を追加することができます．"
+    "次のように`add`関数で集合`s`に要素10を追加することができます．"
    ]
   },
   {
@@ -1687,7 +1697,7 @@
    },
    "outputs": [],
    "source": [
-    "# 6. 要素数を出力して追加できたことを確認する．\n"
+    "# 6. 要素数を出力する．先ほどより一つ増えていることを確認する．\n"
    ]
   },
   {
@@ -1799,8 +1809,8 @@
     "### 4.3 辞書型\n",
     "Pythonの辞書型(dictionary)は集合型を拡張したデータ構造です．\n",
     "辞書型はキーと値のペアの集合です．\n",
-    "キーと値の組の集合で，キーで索引付けされます．\n",
-    "リストが0番目，1番目，2番目のように添え字で要素を区別するように，辞書ではキーで要素を区別します．\n",
+    "要素はキーで索引付けされます．\n",
+    "リストが0番目，1番目，2番目のように添え字で要素を区別するように，辞書型ではキーで要素を区別します．\n",
     "\n",
     "同じキーを持つ要素を複数含めることはできません．\n",
     "値は重複して構いません．\n",
@@ -2471,7 +2481,7 @@
     "下のコードに`time_to_search`関数の定義と呼び出しを書き加えなさい．\n",
     "`for`文の繰り返しはこの関数内で行います．\n",
     "書き加えるコードは次のようにするとよい．\n",
-    "出力する時間の単位をマイクロ秒にしています．\n",
+    "出力する時間の単位をマイクロ秒（$10^{-6}$秒）にしています．\n",
     "\n",
     "関数の定義（字下げをよく見て関数の範囲や`for`文の範囲を把握すること）\n",
     "```\n",
@@ -2632,7 +2642,7 @@
     "\n",
     "`[5, 10, 20, 50, 100, 200, 500, 1000, 2000, 5000, 10000, 20000, 50000, 100000, 200000, 500000, 1000000]`\n",
     "\n",
-    "補足：この要素数はおよそ$10^{i/3}$です．ただし$i>1$．\n",
+    "補足：この要素数はおよそ$10^{i/3}$です．ただし$i>1$の整数．\n",
     "\n",
     "**準備2**\n",
     "ここで，結果をグラフで表示するための`plot`関数を用意する．\n",
@@ -2947,7 +2957,7 @@
     "\n",
     "for n in [5, 10, 20, 50, 100, 200, 500, 1000, 2000, 5000, 10000, 20000, 50000, 100000, 200000, 500000, 1000000]:\n",
     "  d = dict(zip(range(n), range(n)))  # 0からn-1までのn要素の辞書を作る．キーと値は同じ．\n",
-    "  t = time_to_search(1, d) # リストlから1（第1引数）を探す\n",
+    "  t = time_to_search(i, d) # リストlから1（第1引数）を探す\n",
     "  print(\"要素数: \", n, \"\\t時間(μs): \", t * 10**6)\n",
     "  nlist.append(n)    # グラフ用に要素数を記録\n",
     "  tlist.append(t) # グラフ用に実行時間を記録\n",
