--- a/A2-2-1.ipynb
+++ b/A2-2-1.ipynb
@@ -119,7 +119,8 @@
     "**練習**\n",
     "次のコードセルでグラフG1の頂点のリストを出力しなさい．\n",
     "`list(G1.nodes)`を使います．\n",
-    "`[0, 1, 4, 7, 2, 3, 6, 5]`が出力されたら正解です．"
+    "`[0, 1, 4, 7, 2, 3, 6, 5]`が出力されたら正解です．\n",
+    "リスト内の頂点の順序は問いません．"
    ]
   },
   {
@@ -142,7 +143,7 @@
     "\n",
     "他の頂点も試しなさい．\n",
     "例えば頂点7の隣接頂点は`[0, 1, 2, 4, 5]`です．\n",
-    "順番は問いません．"
+    "リスト内の頂点の順序は問いません．"
    ]
   },
   {
@@ -253,7 +254,7 @@
     "\n",
     "第1週6.3節の疑似コードをPythonのコードに書き換えます．\n",
     "次のコードセルに第1週6.3節のdijkstra関数をコピーしてあります．\n",
-    "試しに実行しても文法エラー(SyntaxError)で関数が定義できませんね．\n",
+    "試しに実行しても文法エラー(SyntaxError)で関数が定義できません．\n",
     "\n",
     "**練習**\n",
     "次のコードのdijkstra関数を上から順に読んで，Python言語に合うように書き換えなさい．\n",
@@ -308,7 +309,7 @@
    "source": [
     "上のセルの`dijkstra`関数をPython言語に書き換えると，上のセルを実行したときに文法エラー(SyntaxError)が起きなくなります．\n",
     "\n",
-    "次のコードセルで作成した`dijkstra`関数を呼び出してみましょう．\n",
+    "文法エラーが起きなくなったら，次のコードセルで`dijkstra`関数を呼び出してみましょう．\n",
     "`initialize_single_source`など未定義の関数があるので呼び出すとエラー(NameError)になります．"
    ]
   },
@@ -336,7 +337,7 @@
     "\n",
     "**練習**\n",
     "`initialize_single_source(G)`関数を次のセルに定義しなさい．\n",
-    "引数の`G`はnetworkxで表した無向グラフです．\n",
+    "引数の`G`はnetworkxで表した無向グラフです（`nx.Graph()`）．\n",
     "無限大は`math.inf`と書きます．"
    ]
   },
@@ -358,7 +359,7 @@
    "metadata": {},
    "source": [
     "次のセルで`initialize_single_source`関数の動作を確認しましょう．\n",
-    "出力が次の2行のように慣れば期待したように動作しています．\n",
+    "出力が次の2行のようになれば期待したように動作しています．\n",
     "頂点の並び順は問いません．\n",
     "\n",
     "```\n",
