--- a/A2-1-3.ipynb
+++ b/A2-1-3.ipynb
@@ -3128,7 +3128,7 @@
     "nlist = []                       # 要素数のリスト．グラフX軸のデータ\n",
     "tlist = []                       # 実行時間のリスト．グラフのY軸のデータ\n",
     "print(label)\n",
-    "m = 1000\n",
+    "m = 1000    # m回繰り返した時間を測る\n",
     "\n",
     "for n in [5, 10, 20, 50, 100, 200, 500, 1000, 2000, 5000, 10000, 20000, 50000, 100000, 200000, 500000, 1000000]:\n",
     "  l = list(range(n))  # 0からn-1までのn要素のリストを作る\n",
@@ -3238,7 +3238,7 @@
     "  for i in range(5):\n",
     "    tsum = 0\n",
     "    random.shuffle(l)\n",
-    "    for j in range(1000):\n",
+    "    for j in range(m):\n",
     "      e = l.pop()\n",
     "      t0 = time.time()\n",
     "      l.insert(len(l) // 2, e)\n",
